# renewc

./: Cargo.toml  flake.nix  nix_module.nix  result
.github/workflows/: audit.yml  changelog.yml  release.yml  schedualed-audit.yml  testing.yml
renewc/: Cargo.toml
renewc-test-support/: Cargo.toml
renewc-test-support/src/: gen_cert.rs  lib.rs
renewc/src/: advise.rs  config.rs  install.rs  lib.rs  renew.rs
renewc/src/cert/: info.rs  store.rs
renewc/src/config/: args.rs
renewc/src/config/paths/: derive.rs
renewc/src/diagnostics/: reachable.rs
renewc/src/renew/: server.rs
renewc/tests/: behaviour.rs  format.rs
setup_crosscompile/: Cargo.toml
