[package]
name = "renewc"
version = "0.6.0"
authors = ["Yara <git@yara.blue>"]
edition = "2021"
rust-version = "1.81"
description = "Easy certificate tool: helpful diagnostics, no requirements, no installation needed"
license = "GNUv3"
readme = "README.md"
homepage = "https://github.com/dvdsk/renewc"
repository = "https://github.com/dvdsk/renewc"
keywords = ["cli", "certificate", "acme"]
categories = ["command-line-utilities"]
default-run = "renewc"

[dependencies]
instant-acme = { version = "0.8", default-features = false, features = ["ring", "hyper-rustls"] }
x509-parser = "0.18"
service-install = "0.5.3"

tracing.workspace = true
tracing-subscriber.workspace = true 
tracing-error.workspace = true

clap = { version = "4", features = ["derive"] }
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace"] }
tokio.workspace = true
log = "0.4"
color-eyre.workspace = true
time.workspace = true
netstat2 = "0.11"
libproc = "0.14"
reqwest = { version = "0.13.4", default-features=false, features = [] }
itertools = "0.14"

haproxy-config = "0.4"
rand = "0.10"
owo-colors = { version = "4.1", features = ["supports-colors"] }
yasna = "0.6" # DER encoding
data-encoding = "2.11"
pem.workspace = true
strum = { version = "0.28", features = ["derive"] }
local-ip-address = "0.6"

[dev-dependencies]
renewc-test-support = { path = "../renewc-test-support" }
tempfile.workspace = true
